# sonar

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: crates-io-release.yml  linux-x86_64.yml  macos-aarch64.yml  release-binaries.yml  windows-x86_64.yml
.zed/: settings.json
crates/sonar/: Cargo.toml
crates/sonar-cli/: Cargo.toml
crates/sonar-cli/src/: design.rs  error.rs  main.rs  mapper.rs  specificity.rs  table.rs
crates/sonar/src/: design.rs  error.rs  lib.rs  mapper.rs  prelude.rs  specificity.rs
src/: error.rs  lib.rs  main.rs
src/cli/: error.rs  mod.rs  sensors.rs  table.rs
